fixed font alignment

--- a/private/css/style.css
+++ b/private/css/style.css
@@ -238,6 +238,5 @@ h3 {
 
   .font-content {
     font-size: 18px;
-    text-align: center;
   }
  }
